[package]
name = "arena_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
chrono.workspace = true
url.workspace = true
deno_core.workspace = true
axum.workspace = true
common = { path = "../common" }
jsruntime = { path = "../jsruntime" }
arena_workspace = { path = "../workspace" }
