[package]
name = "vectordb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vector"
path = "src/server/main.rs"

[lib]
name = "vectordb"
path = "src/vectordb_python.rs"
crate-type = ["cdylib"]

[[bench]]
name = "dot_product"
harness = false

[features]
python = []

[dependencies]
rocksdb = { version = "0.21.0", default-features = false, features = ["lz4"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
simdutf8.workspace = true
indexmap.workspace = true
itertools.workspace = true
bstr.workspace = true
bitvec = "1.0.1"
derivative.workspace = true
axum.workspace = true
rand.workspace = true
rmp-serde.workspace = true
abomonation = "0.7.3"
abomonation_derive = "0.5.0"
criterion.workspace = true
pyo3 = { version = "0.19.1", features = [
  "indexmap",
  "anyhow",
  "serde",
  "extension-module",
] }
pythonize = "0.19.0"
bincode = "1.3.3"
glam = "0.24.1"
# nalgebra = "0.32.3"