[package]
name = "arena_workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
log.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
url.workspace = true
derivative.workspace = true
hyper.workspace = true
http.workspace = true
bytes.workspace = true
# tower.workspace = true
tower-http.workspace = true
axum.workspace = true
deno_core.workspace = true
jsruntime = { path = "../jsruntime" }
common = { path = "../common" }
